# obs-studio

plugins/: CMakeLists.txt
plugins/obs-fade-dock/: CMakeLists.txt  README.md
plugins/obs-fade-dock/data/locale/: en-US.ini
plugins/obs-fade-dock/src/: fade-dock.cpp
